--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,23 +4,18 @@
 	</head>
 	<body>
 		<div>
-			<h1><a href="/">Kevin's Blog </a><h1>
+			<h1><a href="/">Kevin's Blog 1 </a><h1>
 		</div>
 		<p> ----------- <p></n></n>
+		{% for post in posts %}
 		<div>
-			<p>Published: 2017-10-20, 09:09 </p>
-			<h2><a href="">My first blog </a></h2>
-			<p> testing testing testing testing testing </p>
-
+			<p> -------------------------------</p>
+			<p>published: {{ post.published_date }} </p>
+			<h1><a href="">{{ post.title }} </a></h1>
+			<p>{{ post.text|linebreaksbr }}</p>
+			</n>
 		</div>
-
-		<p> ----------- <p></n></n>
-		<div>
-			<p>Published: 2017-10-21, 20:12 </p>
-			<h2><a href="">My second blog </a></h2>
-			<p> testing testing testing testing testing </p>
-		</div>
-
+		{% endfor %}
 		
 	</body>
 </html>
