--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,15 @@
-<html>
-	<head>
-		<title> Kevin's blog </title>
-	</head>
-	<body>
-		<div>
-			<h1><a href="/">Kevin's Blog 1 </a><h1>
-		</div>
-		<p> ----------- <p></n></n>
-		{% for post in posts %}
-		<div>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
 			<p> -------------------------------</p>
+			<div class="date">
 			<p>published: {{ post.published_date }} </p>
-			<h1><a href="">{{ post.title }} </a></h1>
+			</div>
+			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }} </a></h1>
 			<p>{{ post.text|linebreaksbr }}</p>
-			</n>
+			</n>					
 		</div>
-		{% endfor %}
-		
-	</body>
-</html>
+	{% endfor %}
+{% endblock %}
